--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,19 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>1-gallery</title>
+    <link rel="stylesheet" href="./css/1-gallery.css" />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <h1 class="main-title">
-          <a class="back-link" href="./index.html">Go back</a> Gallery
-        </h1>
-      </div>
-    </main>
+    <p><a href="./index.html">Go back</a></p>
+
+    <ul class="gallery"></ul>
 
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
