--- a/src/2-form.html
+++ b/src/2-form.html
@@ -2,20 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>2-form</title>
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <h1 class="main-title">
-          <a class="back-link" href="./index.html">Go back</a>form
-        </h1>
-        <load src="./partials/back-link.html" />
-      </div>
-    </main>
+    <a href="./index.html" class="go-back">Go back</a>
+
+    <div class="form-container">
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
 
     <script type="module" src="./js/2-form.js"></script>
   </body>
